--- a/!Buttons/ButtonsWithBlocksFalling/app.css
+++ b/!Buttons/ButtonsWithBlocksFalling/app.css
@@ -29,19 +29,29 @@ html {
 
 body {
 	font-family: 'Roboto', sans-serif;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 	overflow: hidden;
+	background: #000000;
+	}
+
+#canvas1 {
+	background: #000000;
+	}
+
+.buttons {
+	position: absolute;
+	top: 30%;
+	left: 0;
+	width: 100vw;
 	}
 
 .button {
-	min-width: 10rem;
-	height: 3rem;
-	font-size: 2rem;
+	line-height: 11rem;
+	min-width: 30rem;
+	height: 12rem;
+	font-size: 4rem;
 	font-family: inherit;
+	font-weight: 900;
+	color: #ffffff;
 	letter-spacing: 0.01rem;
 	text-align: center;
 	text-decoration: none;
@@ -49,46 +59,43 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	transition: 0.2s ease;
+	transition: 0.2s;
 	margin: 2rem auto;
-	line-height: 2rem;
-	background: transparent;
+	background: #000000;
 	cursor: pointer;
 	padding: 2rem 4rem;
 	outline: none;
+	position: relative;
+	border: 0.2rem solid #ffffff;
+	border-radius: 3rem;
 	}
 
-.button {
-	color: var(--black);
-	border: 1px solid var(--black);
-	}
-
-.button:hover {
-	color: var(--white);
-	background: var(--black);
-	border: 1px solid var(--black);
-	}
-
-.messages {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	width: 80vw;
-	min-height: 6rem;
-	font-size: 2rem;
-	padding: 2rem 3rem;
-	margin: 1.5rem auto;
-	box-shadow: var(--default-box-shadow);
-	background-color: var(--black);
-	border-radius: 0.4rem;
-	color: var(--white);
-	border: 1px solid var(--white);
-	text-align: center;
-	}
-
-.message {
-	display: block;
+.button:before {
+	content: "";
+	position: absolute;
 	width: 100%;
-	margin: 1.5rem auto;
+	height: 100%;
+	top: 0;
+	left: 0;
+	border-radius: 3rem;
+	transition: 0.4s;
+	background-color: #000000;
+	-webkit-text-stroke: 2px white;
+	}
+
+.button:nth-child(1):before {
+	content: "Click Me 1";
+	}
+
+.button:nth-child(2):before {
+	content: "Click Me 2";
+	}
+
+.button:nth-child(3):before {
+	content: "Click Me 3";
+	}
+
+.button:hover:before {
+	color: #000;
+	-webkit-text-stroke: 2px white;
 	}
