--- a/!Games/Tetris/app.css
+++ b/!Games/Tetris/app.css
@@ -28,13 +28,23 @@ html {
 	}
 
 body {
+	background-color: var(--blue);
+	color: var(--white);
 	font-family: 'Roboto', sans-serif;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	overflow: hidden;
+	}
+
+canvas {
+	border: solid 0.3rem var(--white);
+	box-shadow: 0 0 3rem rgba(255, 255, 255, 0.5);
+	}
+
+canvas#tetris {
+	height: 85vh;
 	}
 
 .button {
@@ -55,7 +65,6 @@ body {
 	background: transparent;
 	cursor: pointer;
 	padding: 2rem 4rem;
-	outline: none;
 	}
 
 .button {
@@ -91,4 +100,33 @@ body {
 	display: block;
 	width: 100%;
 	margin: 1.5rem auto;
+	}
+
+.game {
+	display: flex;
+	flex-direction: row;
+	}
+
+.left {
+	width: 60vw;
+	}
+
+.right {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	justify-content: center;
+	width: 35vw;
+	}
+
+.right h3 {
+	text-align: right;
+	font-size: 2rem;
+	padding-bottom: 2rem;
+	}
+
+.score {
+	padding: 0 0 3rem 3rem;
+	text-transform: uppercase;
+	font-size: 3rem;
 	}
